# agenticbox

./: .gitignore  .supermemory.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  VISION.md  founder_contract.md  game.json  game.py  install.ps1  install.sh  kanban.md  marketing.md  package.json  payments.json  pnpm-lock.yaml  soul.md  strategy.md  wrangler.jsonc
.github/workflows/: ci.yml  pages.yml
agents/hermes/: agent.toml
agents/pi/: agent.toml  run.py
agents/reviewer/: agent.toml
agents/security-analyst/: agent.toml
agents/security-analyst/samples/: incident_report.txt  sample_optimize_cache.sh
apps/agent-runtime/: pyproject.toml
apps/agent-runtime/src/agent_runtime/: __init__.py  main.py  mcp_server.py
apps/agent-runtime/src/agent_runtime/tools/: __init__.py  browser.py  filesystem.py  http.py  terminal.py
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_integration.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  store.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
blog/: agents-are-smart-enough-deployment-isnt.md
case-study/: README.md  analyze.py  sample_optimize_cache.sh
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: lib.rs
crates/fs-guard/: Cargo.toml
crates/fs-guard/src/: lib.rs
crates/model-router/: Cargo.toml
crates/model-router/src/: lib.rs
crates/network-control/: Cargo.toml
crates/network-control/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: lib.rs  runtime.rs
crates/session-manager/: Cargo.toml
crates/session-manager/src/: lib.rs
crates/session-manager/tests/: integration_test.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/tool-protocol/: Cargo.toml
crates/tool-protocol/src/: lib.rs
demo/: agent_demo.sh  record.sh
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  agents.md
docs/designs/: dx-user-journey.md
public/: demo.cast  index.html  robots.txt  sitemap.xml  wrangler.jsonc
public/blog/: index.html
public/blog/agents-are-smart-enough-deployment-isnt/: index.html
public/start/: index.html
public/use-cases/security/: index.html
sandbox/: Dockerfile.agent  docker-compose.yml
scripts/: build-cloudflare.sh  dev.sh  gen_demo_cast.py  setup.sh
spikes/001-stdio-pipe/: Cargo.toml  README.md  echo_server.py
spikes/001-stdio-pipe/src/: main.rs
spikes/002-socket-mount/: README.md  socket_test.py
