[workspace]
members = [
    "crates/*",
    "apps/daemon",
    "apps/desktop/src-tauri",
]
# Default build only the daemon, not the full workspace (avoids heavy Tauri deps)
default-members = ["apps/daemon", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AgenticBox Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourorg/agenticbox"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.9", features = ["v4", "serde"] }
bollard = "0.16"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
