[package]
name = "agenticbox-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "AgenticBox CLI - Deploy and manage AI agents locally"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
console = "0.15"
dirs = "5.0"
shared-types = { path = "../../crates/shared-types" }
fs-guard = { path = "../../crates/fs-guard" }
network-control = { path = "../../crates/network-control" }
sandbox-core = { path = "../../crates/sandbox-core" }
tokio = { version = "1.38", features = ["full"] }
crossterm = "0.27"

[[bin]]
name = "agenticbox"
path = "src/main.rs"