[package]
name = "agent-loop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Policy-enforced agent tool-use loop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
console = "0.15"
fs-guard = { path = "../fs-guard" }
network-control = { path = "../network-control" }
policy-engine = { path = "../policy-engine" }
shared-types = { path = "../shared-types" }
