[package]
name = "model-router"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
