[package]
name = "sandbox-core"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
tokio.workspace = true
bollard.workspace = true
futures.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
