[package]
name = "tool-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
