[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
shared-types = { path = "../../../crates/shared-types" }
